tests/NormalTests/paczka1/fuzzy1/87617690.err
Error in line 4: A871 S782 73,1
Error in line 25: P0G93wR S642 83,3
Error in line 27: anxhw S782 10,0
